--- a/src/App.css
+++ b/src/App.css
@@ -7,47 +7,61 @@ body {
   font-size: 10px;
   background-color: #000000;
   box-sizing: border-box;
-  margin: 0;
-  padding: 0.3rem;
+  margin: auto;
+  padding: 5px;
+  height: 100vh;
+  width: 375px;
+  border: none;
+
 
 }
 
 /* header bar */
+
+.header-box {
+  position: sticky;
+  top: 0;
+  border: solid 1px #080808;
+  border-radius: 10px;
+}
 
 .header {
   margin: 0px;
   font-family: inherit;
   font-weight: bold;
   font-size: 30px;
+
 }
 
 .sub-header {
   font-size: 12px;
   color: #696969;
+  margin: 6px;
+}
+
+/* card styling */
+.card {
+  border: solid 3px #101010;
+  border-radius: 10px;
+  padding: 10px;
 }
 
 .photo {
   height: 25rem;
   width: 100%;
   object-fit: cover;
+  border-radius: 5px 5px 0 0;
+}
+
+.title {
+  color: #dcf3ff;
 }
 
 .date {
   font-weight: bold;
 }
 
-/* .button {
-  color: white;
-  border: none;
-  margin: 3px;
-  font-size: 10px;
-  cursor: pointer;
-}
-
-.button:hover {
-  font-size: 25px;
-} */
-
+/* button styling */
 .btn-red {
   font-size: 3px;
   background: #000;
